Add framework error and error manager objects

--- a/web/index.html
+++ b/web/index.html
@@ -15,11 +15,8 @@ and open the template in the editor.
     <body>
         <div>TODO write content</div>
         <script>
-            try {
-                var cfg = new Configuration("js/framework/fwconfig.xml");
-            } catch(e) {
-                console.log(e.getStack());
-            }
+            var test = {"a": "A", "b": "B"};
+            console.log(test["a"]);
         </script>
     </body>
 </html>
