Sequences treatment fixes

--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,17 @@
         <script type="text/javascript" src="js/framework/classes/register.js"></script>
         <script type="text/javascript" src="js/framework/classes/logwriter.js"></script>
         <script type="text/javascript" src="js/framework/components/alert.js"></script>
-        
+        <style>
+            .toOpen {
+                background: blue;
+            }
+            .atOpen {
+                background: red;
+            }
+            .fromOpen {
+                background: yellow;
+            }
+        </style>
     </head>
     <body>
         <div></div>
