--- a/web/index.html
+++ b/web/index.html
@@ -17,8 +17,8 @@
         <script type="text/javascript" src="js/framework/classes/component.js"></script>
         <script type="text/javascript" src="js/framework/classes/register.js"></script>
         <script type="text/javascript" src="js/framework/classes/logwriter.js"></script>
-        <script type="text/javascript" src="js/framework/components/alert.js"></script>
-        <link rel="stylesheet" type="text/css" href="css/components/alert.css" /> 
+        <script type="text/javascript" src="js/framework/components/sample-alert.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/components/sample-alert.css" /> 
     </head>
     <body>
         <div></div>
