Bug fixes on queues

--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,7 @@
                     ErrorManager.addCatalog("data/errors/configuration.xml");
                     ErrorManager.addCatalog("data/errors/component.xml");
                     ErrorManager.addCatalog("data/errors/log.xml");
+                    ErrorManager.addCatalog("data/errors/workflow.xml");
                     
                     CFG.load("data/configurations/production.xml");
                     CFG.load("data/configurations/development.xml");
