--- a/web/index.html
+++ b/web/index.html
@@ -12,15 +12,15 @@
         <script type="text/javascript" src="js/framework/classes/cfg.js"></script>
         <script type="text/javascript" src="js/framework/classes/log.js"></script>
         <script type="text/javascript" src="js/framework/classes/logwriter.js"></script>
+        <script type="text/javascript" src="js/framework/classes/validator.js"></script>
         <script type="text/javascript" src="js/framework/classes/method.js"></script>
         <script type="text/javascript" src="js/framework/classes/selector.js"></script>
         <script type="text/javascript" src="js/framework/classes/source.js"></script>
         <script type="text/javascript" src="js/framework/classes/component.js"></script>
         <script type="text/javascript" src="js/framework/classes/register.js"></script>
         <script type="text/javascript" src="js/framework/classes/logwriter.js"></script>
-        <script type="text/javascript" src="js/framework/components/sample-alert.js"></script>
-        <script type="text/javascript" src="js/framework/components/sample-list.js"></script>
-        <link rel="stylesheet" type="text/css" href="css/components/sample-alert.css" /> 
+        <script type="text/javascript" src="js/framework/components/inputs/textfield.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/components/inputs.css" /> 
     </head>
     <body>
         <div></div>
@@ -36,10 +36,10 @@
                     
                     CFG.load("data/configurations/production.xml");
                     CFG.load("data/configurations/development.xml");
+                    CFG.load("data/configurations/langs/fr/interface.xml");
                     
-                    //var x = new AlertCPN($("div"), "error", "My error message", "My button !", "Title");
-                    //x.start();
-                    var x = new SampleListCPN($("div"));
+                    var v = [new Validator("MINLENGTH", {length: 1}, CFG.get("violations", "textfield.mandatory"))];
+                    var x = new cpnTextfield($("div"), "valeur !", v);
                     x.start();
                 } catch (e) {
                     ErrorManager.process(e); 
