--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,7 @@
         <script type="text/javascript" src="js/framework/classes/component.js"></script>
         <script type="text/javascript" src="js/framework/classes/register.js"></script>
         <script type="text/javascript" src="js/framework/classes/logwriter.js"></script>
+        <script type="text/javascript" src="js/framework/modules/directUI/interfaces/input-itf.js"></script>
         <script type="text/javascript" src="js/framework/modules/directUI/inputs/textfield-block.js"></script>
         <script type="text/javascript" src="js/framework/modules/directUI/inputs/textarea-block.js"></script>
         <link rel="stylesheet" type="text/css" href="css/modules/directUI/inputs/textfield-block.css" />
@@ -29,6 +30,7 @@
         <div class="A"></div>
         <div class="B"></div>
         <div class="C"></div> 
+        <div class="D"></div>
         <script>
             $(document).ready(function() {
                 try {
